# capcat

./: .gitignore  .session-memory.md  A11y.md  ASCII_FORMATTING_COMPLETE.md  BUGS-CRITICAL.md  BUGS.md  CHANGELOG.md  CLAUDE.md  CLEANUP_ANALYSIS.md  DEBUG.md  DOCS-CLEANUP-COMPLETE.md  DOCS-REGENERATION-COMPLETE.md  ETHICS.md  FIX_COLON_README.md  GEMINI.md  GIT-INITIALIZATION-PRD.md  GITHUB-PAGES-DEPLOYMENT-PRD.md  H4_TO_H3_REPLACEMENT_REPORT.md  HELP-SYSTEM-ENHANCEMENT-DESIGN.md  HTML-DOCS-CONVERSION-SUMMARY.md  IMPLEMENTATION-SUMMARY.md  LICENSE.txt  LINK_TITLES_UPDATE_REPORT.md  MARKDOWN-TO-HTML-DOCUMENTATION-PRD.md  MERMAID-COPY-BUTTON-ADDED.md  MERMAID-VISUALIZATION-ADDED.md  PRD-COMPREHENSIVE-FUNCTIONALITY-TEST.md  PRIVACY_POLICY.md  README.md  RELEASE_NOTES_2.0.0.md  STRONG_TO_H4_REPLACEMENT_REPORT.md  STRONG_TO_H4_SUMMARY.md  STRUCTURE.md  TDD-FIX-COMPLETE-REPORT.md  TDD-HELP-SYSTEM-COMPLETE.md  TDD-IMPLEMENTATION-SUMMARY.md  TDD-PAGINATION-COMPLETE.md  TEST-RESULTS-PHASE-1-SMOKE.md  TESTING-EXECUTIVE-SUMMARY.md  TEST_RETRY_SKIP.sh  (+54 more)
.claude/: settings.local.json
.github/: CONTRIBUTING.md  pull_request_template.md
.playwright-mcp/: page-2026-04-24T00-31-24-530Z.yml  page-2026-04-24T01-49-30-221Z.yml  page-2026-04-24T01-50-35-540Z.yml  page-2026-04-24T01-51-32-845Z.yml  page-2026-04-24T01-52-15-496Z.yml  page-2026-04-24T12-57-55-973Z.yml  page-2026-04-24T12-58-24-624Z.yml  page-2026-04-29T12-54-29-645Z.yml  page-2026-04-29T13-07-15-051Z.yml  page-2026-04-29T13-11-29-991Z.yml  page-2026-04-29T13-12-03-101Z.yml  page-2026-04-29T13-34-02-219Z.yml  page-2026-04-29T13-34-47-282Z.yml  page-2026-04-29T13-41-25-415Z.yml  page-2026-04-29T13-59-23-080Z.yml  page-2026-05-04T10-02-27-001Z.yml  page-2026-05-04T10-02-48-783Z.yml  page-2026-05-04T11-55-32-769Z.yml  page-2026-05-04T11-56-25-566Z.yml  page-2026-05-04T14-32-30-833Z.yml  page-2026-05-05T09-36-11-209Z.yml  page-2026-05-05T09-38-53-631Z.yml  page-2026-05-05T09-39-23-708Z.yml  page-2026-05-06T20-08-18-845Z.yml  page-2026-05-06T20-16-08-682Z.yml  page-2026-05-07T09-51-55-625Z.yml  page-2026-05-07T09-53-46-309Z.yml  page-2026-05-07T09-54-14-084Z.yml  page-2026-05-07T09-54-42-375Z.yml  page-2026-05-07T09-56-28-601Z.yml  page-2026-05-07T10-00-34-902Z.yml  page-2026-05-07T10-01-26-669Z.yml  page-2026-05-07T10-01-43-467Z.yml  page-2026-05-07T10-04-44-396Z.yml  page-2026-05-07T10-07-36-166Z.yml
345/: .gitignore
Anthropic research for Capcat Presentation/: .$Capcat-Usecase.drawio.bkp
FCSP/: .$01-User-Journey.drawio.bkp  .$03-JTBD-Framework.drawio.bkp  .$09-Output-Format-Decision-Tree.drawio.bkp  .$12-Value-vs-Effort-Positioning.drawio.bkp
HTML-Docs/: ACCESSIBILITY-REMEDIATION-PLAN.html  README.html  index.html  rss-feed-candidates.html  troubleshooting.html
Reports/: 2025-01-18-capcat-source-management-enhancements.md  2025-01-18-test-execution-summary.md  2025-01-19-graceful-degradation-and-html-fixes.md  2025-01-19-interactive-menu-auto-population.md  2025-01-24-bug-fix-phase1-implementation.md  2025-01-24-intelligent-title-truncation.md  2025-01-24-phase2-completion-report.md  2025-01-24-phase2-implementation-plan.md  2025-10-19-interactive-menu-ux-improvements.md  2025-10-21-progress-bar-animation-fixes.md  2025-10-24-bundle-management-implementation-complete.md  2025-10-24-bundle-management-simplification.md  2025-10-24-critical-deletion-bug-fix.md  2025-10-24-phase1-implementation-complete.md  2025-10-24-source-management-bug-analysis.md  2025-10-24-ui-source-listing-redesign.md  2025-11-02-comprehensive-code-review-report.md  2025-12-09-video-sources-and-progress-bar-fixes.md  2025-12-17-retry-skip-implementation-complete.md  2025-12-19-utility-class-analysis-and-github-pages-planning.md  2025-12-21-html-card-title-truncation-refactor.md  2025-12-26-single-article-fixes-complete.md  2025-12-31-documentation-and-workflow-improvements.md  2026-01-09-progressbar-terminal-width-fix-tdd-refactor-report.md  2026-01-27-accessibility-remediation-complete.md  2026-01-31-tutorials-section-refactor-and-logo-fix.md  2026-03-16_14-13.md  2026-03-17_11-26.md  2026-03-20_02-57.md  2026-03-20_14-56.md  2026-03-23_22-36.md  2026-03-25_00-47.md  2026-03-26_01-01.md  2026-03-26_04-56.md  2026-03-27_23-09.md  2026-03-30_14-12.md  2026-03-31_09-57.md  2026-04-01_12-57.md  2026-04-01_22-41.md  2026-04-03_12-12.md  (+30 more)
Session/: session-01-10-25-role-and-strategy.md  session-02-10-2025-ethical-compliance-cnn-replacement.md  session-03-10-2025-css-asset-embedding-refactor.md  session-05-10-2025-bug-fixes-and-optimizations.md  session-08-10-2025-comprehensive-testing-cleanup.md  session-08-10-2025-documentation-automation-system.md  session-09-10-2025-ai-bundle-atom-feed-support.md  session-12-10-2025-css-theme-system-debugging.md  session-30-09-25-image-protection-removal.md
Video/: package-lock.json  package.json
capcat/: __init__.py  __main__.py  cli.py  tui.py
core/: article_fetcher.py  circuit_breaker.py  cli_recovery.py  cli_validation.py  command_logging.py  config.py  conversion_executor.py  design_system_compiler.py  downloader.py  enhanced_argparse.py  error_handling.py  exceptions.py  html_generator.py  html_post_processor.py  image_processor.py  interactive.py  logging_config.py  media_config.py  media_executor.py  media_processor.py  network_resilience.py  news_source_adapter.py  progress.py  rate_limiter.py  retry.py  retry_skip.py  session_pool.py  shutdown.py  source_config.py  source_configs.py  source_factory.py  specialized_source_manager.py  streamlined_comment_processor.py  template_renderer.py  timeout_config.py  timeout_wrapper.py  unified_article_processor.py  unified_media_processor.py  unified_source_processor.py  update_manager.py  (+2 more)
debug/: README.md  content-extraction-debugger.py  fix-sources.py  log-analyzer.py  quick-troubleshoot.py  simple-troubleshoot.py  source-tester.py
docs-markdown/: DIAGRAMS_INDEX.md  Process-flow.md  TESTING-REMOVE-SOURCE.md  add-source-refactoring-guide.md  advanced-image-filtering.md  api-source-backup-manager.md  configuration.md  deployment.md  ethical-scraping.md  index.md  (+9 more)
(+1935 files in other folders)
