[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capcat"
dynamic = ["version"]
description = "A command-line tool designed to solve content preservation challenges with Ethical Scraping."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Stayu Kasabov - Product Designer and Experiences Builder | AI-powered Prototyping & MVP | Strategic Generalist" }
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "requests>=2.28.0,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "PyYAML>=6.0,<7.0",
    "feedparser>=6.0,<7.0",
    "questionary>=2.0,<3.0",
    "markdownify>=0.11,<1.0",
    "lxml>=4.9,<6.0",
    "ruamel.yaml>=0.17,<0.19",
    "validators>=0.20,<1.0",
    "prompt_toolkit>=3.0,<4.0",
    "yt-dlp>=2023.1.6,<2027.0.0",
    "markdown>=3.5,<4.0",
    "pygments>=2.16,<3.0",
    "charset-normalizer>=3.0,<4.0",
    "brotli>=1.0,<2.0",
    "pynput>=1.7.6,<2.0",
    "rich>=13.0,<15.0",
]

[project.urls]
Homepage = "https://github.com/<owner>/capcat"

[project.scripts]
capcat = "capcat.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "build>=1.0",
    "twine>=5.0",
]

[tool.setuptools.dynamic]
version = { attr = "capcat.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["capcat*"]
exclude = ["legacy*", "tests*"]

[tool.setuptools.package-data]
capcat = [
    "themes/**/*",
    "templates/**/*",
    "htmlgen/**/*.html",
    "htmlgen/**/*.css",
    "htmlgen/**/*.js",
    "sources/builtin/**/*.yaml",
    "sources/builtin/**/*.yml",
]

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.mypy]
strict = true
python_version = "3.8"
