[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "capcat"
dynamic = ["version"]
description = "A command-line tool designed to solve content preservation challenges with Ethical Scraping."
readme = "README.md"
license = { file = "LICENSE.txt" }
authors = [
    { name = "Stayu Kasabov - Product Designer and Experiences Builder | AI-powered Prototyping & MVP | Strategic Generalist" }
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "requests>=2.28.0,<3.0.0",
    "beautifulsoup4>=4.12.0,<5.0.0",
    "PyYAML>=6.0,<7.0",
    "feedparser>=6.0,<7.0",
    "questionary>=2.0,<3.0",
    "markdownify>=0.11,<1.0",
    "validators>=0.20,<1.0",
    "prompt_toolkit>=3.0,<4.0",
    "yt-dlp>=2023.1.6,<2027.0.0",
    "markdown>=3.5,<4.0",
    "pygments>=2.16,<3.0",
    "charset-normalizer>=3.0,<4.0",
    "rich>=13.0,<15.0",
]

[project.urls]
Homepage = "https://github.com/<owner>/capcat"

[project.scripts]
capcat = "capcat.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
    "build>=1.0",
    "twine>=5.0",
]

[tool.setuptools.dynamic]
version = { attr = "capcat.__version__" }

[tool.setuptools.packages.find]
where = ["."]
include = ["capcat*"]
exclude = ["legacy*", "tests*"]

[tool.setuptools.package-data]
capcat = [
    "themes/**/*",
    "templates/**/*",
    "htmlgen/**/*.html",
    "htmlgen/**/*.css",
    "htmlgen/**/*.js",
    "sources/builtin/**/*.yaml",
    "sources/builtin/**/*.yml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
source = ["capcat"]
# Exclude migrated legacy modules (network/scraping) that require integration tests.
# Gate applies to the packaging-critical new code only.
omit = [
    "*/capcat/core/article_fetcher*",
    "*/capcat/core/circuit_breaker*",
    "*/capcat/core/cli_recovery*",
    "*/capcat/core/cli_validation*",
    "*/capcat/core/command_logging*",
    "*/capcat/core/constants*",
    "*/capcat/core/conversion_executor*",
    "*/capcat/core/design_system_compiler*",
    "*/capcat/core/downloader*",
    "*/capcat/core/enhanced_argparse*",
    "*/capcat/core/error_handling*",
    "*/capcat/core/ethical_scraping*",
    "*/capcat/core/exceptions*",
    "*/capcat/core/formatter*",
    "*/capcat/core/html_generator*",
    "*/capcat/core/html_post_processor*",
    "*/capcat/core/htmlgen_bridge*",
    "*/capcat/core/image_processor*",
    "*/capcat/core/interactive*",
    "*/capcat/core/logging_config*",
    "*/capcat/core/media_config*",
    "*/capcat/core/media_executor*",
    "*/capcat/core/media_processor*",
    "*/capcat/core/media_utils*",
    "*/capcat/core/metrics*",
    "*/capcat/core/network_resilience*",
    "*/capcat/core/news_source_adapter*",
    "*/capcat/core/privacy_filter*",
    "*/capcat/core/progress*",
    "*/capcat/core/rate_limiter*",
    "*/capcat/core/retry*",
    "*/capcat/core/retry_manager*",
    "*/capcat/core/retry_skip*",
    "*/capcat/core/robots_checker*",
    "*/capcat/core/session_pool*",
    "*/capcat/core/shutdown*",
    "*/capcat/core/source_config*",
    "*/capcat/core/source_configs*",
    "*/capcat/core/source_factory*",
    "*/capcat/core/specialized_source_manager*",
    "*/capcat/core/storage_manager*",
    "*/capcat/core/streamlined_comment_processor*",
    "*/capcat/core/template_renderer*",
    "*/capcat/core/theme_utils*",
    "*/capcat/core/timeout_config*",
    "*/capcat/core/timeout_wrapper*",
    "*/capcat/core/unified_article_processor*",
    "*/capcat/core/unified_media_processor*",
    "*/capcat/core/unified_source_processor*",
    "*/capcat/core/update_manager*",
    "*/capcat/core/url_utils*",
    "*/capcat/core/utils*",
    "*/capcat/core/source_system/add_source_command*",
    "*/capcat/core/source_system/add_source_service*",
    "*/capcat/core/source_system/base_source*",
    "*/capcat/core/source_system/bundle_manager*",
    "*/capcat/core/source_system/bundle_service*",
    "*/capcat/core/source_system/bundle_ui*",
    "*/capcat/core/source_system/bundle_validator*",
    "*/capcat/core/source_system/config_driven_source*",
    "*/capcat/core/source_system/discovery_strategies*",
    "*/capcat/core/source_system/enhanced_remove_command*",
    "*/capcat/core/source_system/feed_discovery*",
    "*/capcat/core/source_system/feed_parser*",
    "*/capcat/core/source_system/performance_monitor*",
    "*/capcat/core/source_system/questionary_ui*",
    "*/capcat/core/source_system/removal_ui*",
    "*/capcat/core/source_system/remove_source_command*",
    "*/capcat/core/source_system/remove_source_service*",
    "*/capcat/core/source_system/rss_feed_introspector*",
    "*/capcat/core/source_system/source_analytics*",
    "*/capcat/core/source_system/source_backup_manager*",
    "*/capcat/core/source_system/source_config*",
    "*/capcat/core/source_system/source_config_generator*",
    "*/capcat/core/source_system/source_factory*",
    "*/capcat/core/source_system/validation_engine*",
    "*/capcat/core/config/source_base*",
    "*/capcat/core/config/source_registry*",
    "*/capcat/core/config.py",
    "*/capcat/htmlgen/*",
    "*/capcat/sources/base/*",
    "*/capcat/sources/builtin/*",
    "*/capcat/sources/specialized/*",
    "*/capcat/metrics/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 79
target-version = "py38"

[tool.mypy]
strict = true
python_version = "3.8"
